--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.name=root
+spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/chat_bot
 chatbot.proxy.host=127.0.0.1
 chatbot.proxy.port=7890
+mybatis.mapper-locations=classpath:resources/mapper/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
